2009-04-29  H.Merijn Brand (0.25)

    * Raised minimum perl version to 5.005_03
    * Code cleanup (perlcritic, style, layout)
    * Implement f_exp
    * Split csv handles for input (no eol default) and
      output (default "\r\n")
    * Updated info URL's
    * Cleaned up tests
    * Tests now use Test::More
    * Cut down README. No need to be a duplicate module pod
    * Added TODO to documentation
    * Added examples/ from docs

2005-08-10  Jeff Zucker <jzuckerATcpan.org> (0.23)

    * fixed bug in automatic column generation, defining
      col_names => [] will auto generate col1, col2, etc.
      thanks for bug report, harleypig on AnnoCPAN

    * added support for multi-character end-of-line separators
      thanks for suggestion, harleypig on AnnoCPAN
    
2005-04-01  Jeff Zucker <jzuckerATcpan.org> (0.22)

    * removed DESTROY and disconnect - use DBD File's instead

    * added ignore_missing_table flag to avoid warnings with
      DROP TABLE IF EXISTS
    
2004-04-18  Jeff Zucker <jzuckerATcpan.org> (0.21)

    * added support for $dbh->{Active}, should now work 
      well with Class::DBI and other caching systems

    * added support for DROP TABLE IF EXISTS - doesn't
      complain if table is already dropped

    * removed DBD::File from the distribution - it's now
      distributed with DBI 1.42 and higher
    
2002-03-01  Jeff Zucker <jzuckerATcpan.org> (0.2002)

    * added parser-caching for speedier operation,
      see File.pm prepare()

    * further adjustments in tests including fix for
      prototypes to make it perl 5.8 compatible


2002-01-21  Jeff Zucker <jzuckerATcpan.org> (0.2001)

    * adjusted docs to show Jeff as the new maintainer.

    * added docs for extended SQL features (joins, etc.)
      available with SQL::Statement 1.0 and above.

    * adjusted tests blobs.t, chopblanks.t, and ak-dbd.t
      to work with all versions of SQL::Statement.

2002-12-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1030)
