@@ -23,6 +23,7 @@ t/51_commit.t
 t/60_misc.t
 t/70_csv.t
 t/71_csv-ext.t
+t/72_csv-schema.t
 t/80_rt.t
 t/lib.pl
 examples/passwd.pl
