@@ -1,0 +1,46 @@
+#!/usr/bin/perl
+
+use strict;
+use Test::More tests => 12;
+
+BEGIN { use_ok ("DBI"); }
+do "t/lib.pl";
+
+my @tbl_def = (
+    [ "id",   "INTEGER",  4, 0 ],
+    [ "name", "CHAR",    64, 0 ],
+    );
+
+my $dbh;
+
+my $dir = DbDir () || "output";
+
+ok (my $dbh = DBI->connect ("dbi:CSV:", "", "", {
+	f_dir	=> $dir,
+	}),					"connect");
+
+ok (my $tbl = FindNewTable ($dbh),		"find new test table");
+like (my $def = TableDefinition ($tbl, @tbl_def),
+    qr{^create table $tbl}i,			"table definition");
+ok ($dbh->do ($def),				"create table");
+
+my $usr = eval { getpwuid $< };
+   $usr and $usr = qq{"$usr"};
+is_deeply ([ $dbh->tables () ],
+	   [ qq{$usr.$tbl}   ],			"tables");
+
+ok ($dbh->disconnect,				"disconnect");
+undef $dbh;
+
+ok ($dbh = DBI->connect ("dbi:CSV:", "", "", {
+    f_schema	=> undef,
+    f_dir	=> $dir,
+    }),						"connect (f_schema => undef)");
+is_deeply ([ $dbh->tables () ], [ $tbl ],	"tables");
+
+ok ($dbh->do ("drop table $tbl"),		"drop table");
+
+ok ($dbh->disconnect,				"disconnect");
+undef $dbh;
+
+ok (rmdir $dir,					"no files left");
