@@ -1,8 +1,9 @@
-2009-04-29  H.Merijn Brand (0.25)
+2009-05-05  H.Merijn Brand (0.25)
 
     * Raised minimum perl version to 5.005_03
     * Code cleanup (perlcritic, style, layout)
-    * Implement f_exp
+    * Implemented f_ext
+    * Implemented f_schema (in DBD::File)
     * Split csv handles for input (no eol default) and
       output (default "\r\n")
     * Updated info URL's
